OpenedPackages: sync with remote